--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -183,6 +183,7 @@ img {
   text-align: left;
   margin: 40px 0 4px;
   letter-spacing: 0%;
+  color: rgba(6, 11, 53, 1);
 }
 
 .card__title:hover {
@@ -225,27 +226,6 @@ img {
   font-size: 16px;
   line-height: 18px;
   color: rgba(6, 11, 53, 1);
-}
-
-.card__link {
-  background-color: #00acdc;
-  width: 166px;
-  height: 40px;
-  border: 1px solid #00acdc;
-  border-radius: 5px;
-  margin-top: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #fff;
-  font-weight: 700;
-  font-size: 14px;
-  transition:
-    background-color 300ms ease,
-    color 300ms ease,
-    border-color 300ms ease;
 }
 
 .card__link:hover {
